fix: popup scrollbars, required items

--- a/admin/src/assets/styles/components/_Panel.scss
+++ b/admin/src/assets/styles/components/_Panel.scss
@@ -212,9 +212,19 @@
 	&-content {
 
 		@include scrollbar;
-		max-height: 70vh;
+		max-height: 30vh;
 		margin-bottom: 1.5em;
+		margin-right: -1.5em;
+		padding-right: 1.5em;
 		overflow-y: scroll;
+
+		@media (min-height: 31.25em) {
+			max-height: 50vh;
+		}
+
+		@media (min-height: 56.25em) {
+			max-height: 70vh;
+		}
 	}
 
 	&-section {
